[package]
name = "laos-evolution-runtime"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-laos-evolution/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

frame-executive = { default-features = false, workspace = true }
frame-support = { default-features = false, workspace = true }
frame-system = { default-features = false, workspace = true }
frame-try-runtime = { default-features = false, workspace= true, optional = true }
pallet-aura = { default-features = false, workspace = true }
pallet-balances = { default-features = false, workspace = true }
pallet-grandpa = { default-features = false, workspace = true }
pallet-sudo = { default-features = false, workspace = true }
pallet-timestamp = { default-features = false, workspace = true }
pallet-transaction-payment = { default-features = false, workspace = true }
sp-api = { default-features = false, workspace = true }
sp-block-builder = { default-features = false, workspace = true }
sp-consensus-aura = { default-features = false, workspace = true }
sp-consensus-grandpa = { default-features = false, workspace = true }
sp-core = { default-features = false, workspace = true }
sp-inherents = { default-features = false, workspace = true }
sp-offchain = { default-features = false, workspace = true }
sp-runtime = { default-features = false, workspace = true }
sp-session = { default-features = false, workspace = true }
sp-std = { default-features = false, workspace = true }
sp-transaction-pool = { default-features = false, workspace = true }
sp-version = { default-features = false, workspace = true }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { default-features = false, workspace = true }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, workspace = true }

# Primitive types
evochain-primitives = { path = "../primitives", default-features = false }

# Used for runtime benchmarking
frame-benchmarking = { default-features = false, optional = true , workspace = true }
frame-system-benchmarking = { default-features = false, optional = true , workspace = true }

# Local Dependencies
pallet-living-assets-evolution = { workspace = true, default-features = false }

# Bridge dependencies
pallet-bridge-grandpa = { workspace = true, default-features = false }
bp-header-chain = { workspace = true, default-features = false }
bp-rococo = { workspace = true, default-features = false }
bp-runtime = { workspace = true, default-features = false }

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
	"evochain-primitives/std",
	"frame-try-runtime?/std",
	"frame-system-benchmarking?/std",
	"frame-benchmarking?/std",
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-living-assets-evolution/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"substrate-wasm-builder",
	"bp-rococo/std",
	"bp-runtime/std",
	"bp-header-chain/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-living-assets-evolution/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-bridge-grandpa/runtime-benchmarks",
]
try-runtime = [
	"frame-try-runtime/try-runtime",
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"frame-support/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-living-assets-evolution/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"sp-runtime/try-runtime",
	"pallet-bridge-grandpa/try-runtime",
]
